More style changes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,8 +7,8 @@
 - title: GitHub
   url: https://github.com/carlosabalde
 
-- title: Twitter
-  url: https://twitter.com/carlosabalde
+- title: Email
+  url: mailto:durga.kulla@gmail.com
 
 - title: Facebook
-  url: https://www.facebook.com/carlosabalde
+  url: https://www.linkedin.com/in/durgakullakanda/
