--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,14 @@
 - title: About me
   url: /about
 
-- title: LinkedIn
-  url: https://www.linkedin.com/in/carlosabalde
-
 - title: GitHub
-  url: https://github.com/carlosabalde
+  url: https://github.com/durgakulla
+
+- title: LinkedIn
+  url: https://www.linkedin.com/in/durgakullakanda/
+
+- title: Resume
+  url: /
 
 - title: Email
   url: mailto:durga.kulla@gmail.com
-
-- title: Facebook
-  url: https://www.linkedin.com/in/durgakullakanda/
