Finalize header image and colors

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Durga Kullakanda
-author: GitHub User
-email: your-email@domain.com
+author: Durga Kullakanda
+email: durga.kulla@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
  Projects and resume
 paginate: 3
