--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
   url: https://www.linkedin.com/in/durgakullakanda/
 
 - title: Resume
-  url: /
+  url: /durga_kullakanda_resume.pdf
 
 - title: Email
   url: mailto:durga.kulla@gmail.com
