--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@ description: > # this means to ignore newlines until "show_exerpts:"
 paginate: 5
 show_excerpts: false # set to true to show excerpts on the homepage
 
+permalink: /:categories/:title
+post_dirs: false
+
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
