--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 #My variables
-site_brand: 'Durga Kullakanda'
+site_brand: 'DURGA KULLAKANDA'
 post_sharing_on: true
 related_posts_on: false
 show_date: false
